src/objects/Class_A__c.object
<CustomObject>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <picklist>
            <picklistValues>
                <fullName>RAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIHAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClassTeacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClassTeacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DetailedDescription__c</fullName>
        <label>DetailedDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxSize__c</fullName>
        <label>MaxSize</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyCount__c</fullName>
        <label>MyCount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfStudents__c</fullName>
        <label>NumberOfStudents</label>
        <summaryForeignKey>Students__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Class_A</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class_A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>